# elements

./: CMakeLists.txt  LICENSE.txt  README.md
include/: accumulation.h  affine_space.h  algebra.h  array.h  array_circular.h  array_double_ended.h  array_k.h  array_segmented_double_ended.h  array_segmented_single_ended.h  array_single_ended.h  binary_counter.h  bit.h  combinatorics.h  config.h.in  copy.h  count.h  cursor.h  elements.h  fill.h  flat_map.h  for_each.h  functional.h  gather.h  graph.h  instrumented.h  integer.h  intrinsics.h  invocable.h  lexicographical.h  list_doubly_linked.h  list_doubly_linked_circular.h  list_doubly_linked_front_back.h  list_doubly_linked_sentinel.h  list_pool.h  list_singly_linked.h  list_singly_linked_circular.h  list_singly_linked_front.h  list_singly_linked_front_back.h  locked_queue.h  locked_stack.h  (+26 more)
include/adapters/: counted_position.h  filter_position.h  insert_position.h  loadable_position.h  map_position.h  reverse_position.h
include/algorithms/: algebra.h  copy.h  count.h  dynamic_sequence.h  fill.h  for_each.h  integer.h  invocable.h  lexicographical.h  map.h  ordered_algebra.h  ordering.h  partition.h  position.h  quantify.h  reduce.h  regular.h  search.h  search_binary.h  swap.h
include/concepts/: algebra.h  functional.h  integer.h  invocable.h  invokable.h  ordered_algebra.h  position.h  regular.h
include/data_structures/: array.h  array_double_ended.h  array_k.h  binary_counter.h  bounded_range.h  coordinate_point.h  coordinate_vector.h  dynamic_sequence.h  expected.h  pair.h  polynomial.h  rational.h  result.h  task_system.h  tuple.h
include/type_functions/: algebra.h  invocable.h  invokable.h  position.h  regular.h
test/: CMakeLists.txt  accumulation.cpp  affine_space.cpp  algebra.cpp  array.cpp  array_circular.cpp  array_double_ended.cpp  array_k.cpp  array_segmented_double_ended.cpp  array_segmented_single_ended.cpp  array_single_ended.cpp  bicursor.cpp  bit.cpp  combinatorics.cpp  coordinate_point.cpp  coordinate_vector.cpp  copy.cpp  count.cpp  cursor.cpp  expected.cpp  fill.cpp  filter_position.cpp  for_each.cpp  functional.cpp  gather.cpp  instrumented.cpp  integer.cpp  invocable.cpp  lexicographical.cpp  list_doubly_linked_circular.cpp  list_doubly_linked_front_back.cpp  list_doubly_linked_sentinel.cpp  list_pool.cpp  list_singly_linked.cpp  list_singly_linked_circular.cpp  list_singly_linked_front.cpp  locked_queue.cpp  locked_stack.cpp  main.cpp  map.cpp  (+25 more)
